--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,14 @@
 {
-  "arrowParens": "always",
-  "endOfLine": "lf",
   "printWidth": 80,
-  "jsxSingleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": true,
   "quoteProps": "consistent",
-  "tabWidth": 2,
-  "semi": true,
-  "trailingComma": "all"
+  "jsxSingleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
